syntax = "proto3";

package transaction;

option go_package = "protogen/accountservice/proto";

import "google/protobuf/timestamp.proto";
import "common/common.proto";

message Transaction {
  string id = 1;
  string source_account_id = 2;
  string destination_account_id = 3;  // Required only for type=transfer
  double amount = 4;
  string type = 5; // transfer/withdraw_full/withdraw_amount/add_amount
  string transaction_status = 6;
  string reference = 7;
  google.protobuf.Timestamp created_at = 8;
  google.protobuf.Timestamp updated_at = 9;
  string created_by = 10;
  string error_reason = 11;
  int32 retry_count = 12;
  google.protobuf.Timestamp last_retry_at = 13;
  google.protobuf.Timestamp timeout_at = 14;
  int32 version = 15;
}

message InitTransactionRequest {
  string source_account_id = 1;
  string destination_account_id = 2;  // Required only for type=transfer
  double amount = 3;
  string type = 4;
  string reference = 5;
  common.Metadata metadata = 7;
}

message InitTransactionResponse {
  string transaction_id = 1;
  string transaction_status = 2;
  common.Response response = 3;
}

message GetTransactionHistoryRequest {
  string account_id = 1;
  string company_id = 2;
  google.protobuf.Timestamp start_date = 3;
  google.protobuf.Timestamp end_date = 4;
  string sort_order = 5;
  common.PaginationRequest pagination = 6;
  common.Metadata metadata = 7;
  string types = 8;  // comma separated Filter by transaction types
}

message GetTransactionHistoryResponse {
  repeated Transaction transactions = 1;
  common.PaginationResponse pagination = 2;
  common.Response response = 3;
}

message CommitTransactionRequest {
  string transaction_id = 1;
  common.Metadata metadata = 2;
}

message CommitTransactionResponse {
  common.Response response = 1;
}

message RollbackTransactionRequest {
  string transaction_id = 1;
  string reason = 2;
  common.Metadata metadata = 3;
}

message RollbackTransactionResponse {
  common.Response response = 1;
}